# itachip2ir

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  README.rst  pyitachip2ir.py  setup.py
source/: IRCommand.h  IRCommandParser.cpp  ITachIP2IR.cpp  ITachIP2IR.h  itachip2ir_remote.py  itachip2ir_switch.py  pyitachip2ir.py
